--- a/style.css
+++ b/style.css
@@ -1,24 +1,37 @@
+.container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 700px;
+    height: 700px;
+    margin: 0px auto;
+}
+
+
 .grid{
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    width: 100vw;
+    height: 90%;
+    width: 90%;
 }
 
 .row{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100vw;
+    width: 100%;
 }
 
-
 .square{
-    height: 40px;
-    width: 40px;
     border: 1px solid black;
     box-sizing: border-box;
+    height: 100%;
+}
+
+.hover{
+    background-color: gray;
 }
